<resources>
    <string name="app_name">FIT 13</string>

    <string name="daily_motivation">DAILY MOTIVATION</string>
    <string name="fit13">FIT13</string>
    <string name="lock_apps">Lock Apps</string>
    <string name="workout_log">Workout Log</string>
    <string name="diet_tracker">Diet Tracker</string>
    <string name="calorie_goal">Calorie Goal</string>
    <string name="current_calories">Current Calories</string>
    <string name="total_exercise_hours">Total Exercise Hours</string>
    <string name="keep_moving_forward">KEEP MOVING FORWARD!</string>
    <string name="calories">calories</string>
    <string name="currentcalories">currentCalories</string>
</resources>